responsive for 12 pro

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -14,9 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="/assets/fontawesome/css/solid.min.css" />
+    <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/assets/fontawesome/css/fontawesome.css">
+    <link rel="stylesheet" href="/assets/fontawesome/css/solid.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,18 +53,19 @@
               </svg>
               <svg class="icon" viewBox="0 0 30 30"><use xlink:href="#menu" x="22%" y="25%"></use></svg>
             </div>
-            <div class="search">
+            <div class="search m">
               <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">   
-            <symbol id="magnifying-desktop" viewBox="0 0 1200 1200"><title>magnifying-desktop</title>
-              <path d="M606.209,578.714L448.198,423.228C489.576,378.272,515,318.817,515,253.393C514.98,113.439,399.704,0,257.493,0
+                <symbol id="magnifying-desktop" viewBox="0 0 1200 1200"><title>magnifying-desktop</title>
+                  <path d="M606.209,578.714L448.198,423.228C489.576,378.272,515,318.817,515,253.393C514.98,113.439,399.704,0,257.493,0
                    C115.282,0,0.006,113.439,0.006,253.393s115.276,253.393,257.487,253.393c61.445,0,117.801-21.253,162.068-56.586
                    l158.624,156.099c7.729,7.614,20.277,7.614,28.006,0C613.938,598.686,613.938,586.328,606.209,578.714z M257.493,467.8
                    c-120.326,0-217.869-95.993-217.869-214.407S137.167,38.986,257.493,38.986c120.327,0,217.869,95.993,217.869,214.407
                    S377.82,467.8,257.493,467.8z"></path>
-             </symbol>
-          </svg>
-          <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#magnifying-desktop" x="18%" y="25%"></use></svg>
-      </div>
+                </symbol>
+              </svg>
+              <svg class="icon" viewBox="0 0 40 40"><use xlink:href="#magnifying-desktop" x="18%" y="25%"></use></svg>
+              <input type="search">
+            </div>
           </div>
           <div class="logo col-6">
             <img src="/assets/images/Logo.png" alt="">
@@ -329,7 +331,7 @@
               alt=""
             />
             <img class="d-lg-none d-md-none" src="/assets/images/home/homeSlide/Slider-2-543x460.png" alt="">
-            <div class="title animate__animated animate__fadeInDown">
+            <div class="second title animate__animated animate__fadeInDown">
               <h4>Clear 4k Camera</h4>
               <h1>Fast Drone Delivery</h1>
               <p>
@@ -526,7 +528,7 @@
         <div class="category">
           <ul>
             <li>
-              <a href="" class="active">featured</a>
+              <a href="">featured</a>
             </li>
             <li>
               <a href="">best sellers</a>
@@ -535,6 +537,218 @@
               <a href="">new Arrivals</a>
             </li>
           </ul>
+        </div>
+        <div class="porduct-slide">
+          <div class="owl-carousel owl-theme">
+            <div class="item">
+              <div class="prdct product-top">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/appleCinema30/1-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/appleCinema30/10-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>Apple Cinema 30"</h4>
+                  <p>$122.00</p>
+                  <button class="animate__animated">ADD TO CART</button>
+                </div>
+              </div>
+              <div class="prdct product-bottom">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/CanonEos/10-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/CanonEos/11-370x370.jpg" alt="">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>Canon EOS 5D</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="prdct product-top">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/HTCtouchHD/12-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/HTCtouchHD/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>HTC Touch HD</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+              <div class="prdct product-bottom">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/ipadNano/2-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/ipadNano/16-370x370.jpg" alt="">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>ipad Nano</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="prdct product-top">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/ipadShuffle/15-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/ipadShuffle/17-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>ipad Shuffle</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+              <div class="prdct product-bottom">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/HPlp/11-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/HPlp/18-370x370.jpg" alt="">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>HP LP3065</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="prdct product-top">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/imac/13-370x370.jpg" alt="">
+                    <img src="/assets/images/home/products/imac/15-370x370.jpg" alt="" class="scond-img" style="position: absolute;">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>iMac</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+              <div class="prdct product-bottom">
+                <div class="image">
+                  <a href="">
+                    <img src="/assets/images/home/products/ipadClassic/15-370x370 (1).jpg" alt="">
+                    <img src="/assets/images/home/products/ipadClassic/18-370x370.jpg" alt="">
+                  </a>
+                  <div class="rate">
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: gold;"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                    <i class="bi bi-star-fill" style="color: rgb(200, 200, 200);"></i>
+                  </div>
+                  <div class="wish-view">
+                    <div class="view"></div>
+                    <div class="wish"></div>
+                    <div class="compare"></div>
+                  </div>
+                </div>
+                <div class="caption">
+                  <h4>iPad Classic</h4>
+                  <p>$122.00</p>
+                  <button class="d-none">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+        </div>
         </div>
       </div>
     </section>
@@ -901,7 +1115,7 @@
         </div>
       </div>
       <div class="footer-mid">
-        <ul>
+        <ul class="fm-ul d-lg-flex d-none">
           <li><a href="">Brands</a></li>
           <li>|</li>
           <li><a href="">Gift Certificates</a></li>
@@ -912,7 +1126,7 @@
           <li>|</li>
           <li><a href="">Site Map</a></li>
         </ul>
-        <ul>
+        <ul class="fm-ul d-lg-flex d-none">
           <li><a href="">My Account</a></li>
           <li>|</li>
           <li><a href="">Specials</a></li>
@@ -923,6 +1137,88 @@
           <li>|</li>
           <li><a href="">Contact Us</a></li>
         </ul>
+        <div class="footer-mid-sm d-block d-lg-none">
+          <div class="container">
+            <div class="accordion">
+              <div class="steps">
+                <div class="step-1">
+                  <div class="sect sect-1">
+                    <h3>
+                      Extras
+                    </h3>
+                    <i class="fa-solid fa-chevron-down"></i>
+                  </div>
+                  <div class="ul">
+                    <ul>
+                      <li>
+                        <a href="">
+                          Brands
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Gift Certificates
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Affiliate
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Specials
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Site Map
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="step-2">
+                  <div class="sect">
+                    <h3>
+                      Our Company
+                    </h3>
+                    <i class="fa-solid fa-chevron-down"></i>
+                  </div>
+                  <div class="ul">
+                    <ul>
+                      <li>
+                        <a href="">
+                          My Account
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Specials
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Brands
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Order History
+                        </a>
+                      </li>
+                      <li>
+                        <a href="">
+                          Contact Us
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="footer-bottom">
         <div class="container">
@@ -973,5 +1269,6 @@
     <script src="/assets/js/home.js"></script>
     <script src="/assets/js/header.js"></script>
     <script src="/assets/js/footer.js"></script>
+    <script src="/assets/js/sm-header.js"></script>
   </body>
 </html>
