--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -302,7 +302,7 @@
                 <sup>0</sup>
               </div>
               <div class="cart-drop">
-                <div class="cd-top d-flex justify-content-between align-items-center" style="width: 100%; border-bottom:solid 0.5px rgb(240, 240, 240);">
+                <div class="cd-top d-flex justify-content-between align-items-center">
                   <span style="font-size: 14px;">CART</span>
                   <div class="svg d-flex align-items-center justify-content-end">
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -315,7 +315,26 @@
                     <li>Your shopping cart is empty</li>
                   </ul>
                 </div>
-                <div class="cd-btm"></div>
+                <div class="cd-btm">
+                  <ul>
+                    <li>
+                      <span>Sub-Total</span><span>0<span>$</span></span>
+                    </li>
+                    <li>
+                      <span>Eco Tax (-2.00)</span><span>0<span>$</span></span>
+                    </li>
+                    <li>
+                      <span>VAT (20%)</span><span>0<span>$</span></span>
+                    </li>
+                    <li>
+                      <span>Total</span><span>0<span>$</span></span>
+                    </li>
+                  </ul>
+                  <div class="buttons">
+                    <button>VIEW CART</button>
+                    <button>CHECKOUT</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
